glpideployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi-deployment
  namespace: glpi
spec:
  selector:
    matchLabels:
      app: glpi
  replicas: 1 # how many replicas of pods we want to create.
  template:
    metadata:
      labels:
        app: glpi
    spec:
      containers:
      - name: glpi
        image: dinesh1205reddy/glpi:10.0.10
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 8Gi
            cpu: 2
          requests:
            memory: 2Gi
            cpu: 500m
        volumeMounts:
          - name: glpipvc
            mountPath: /var/www/html/glpi/config
            subPath: config
          - name: glpipvc
            mountPath: /var/www/html/glpi/plugins
            subPath: plugins
          - name: glpipvc
            mountPath: /var/www/html/glpi/marketplace
            subPath: marketplace
          - name: glpipvc
            mountPath: /var/www/html/glpi/files
            subPath: files
        lifecycle:
          postStart:
            exec:
              command: 
                - sh
                - -c
                - yes | cp -Rvn /opt/files/ /var/www/html/glpi/
                - opt/permission.sh
      volumes:
        - name: glpipvc
          persistentVolumeClaim:
            claimName: glpipv
