glpiservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: glpisv
  namespace: glpi
spec:
  selector:
    app: glpi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
