mariadb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadbsv
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort
