ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi
  namespace: glpi
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - glpi.k8s.in
    secretName: glpi-tls
  rules:
  - host: glpi.k8s.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glpisv
            port:
              number: 80
